Git_WGBH_QC/src/objects/Pledge_Benefit__c.object
<CustomObject>
    <description>This includes the benefit details of the pledge</description>
    <fields>
        <fullName>Benefit_Sts__c</fullName>
        <label>Benefit Status</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pledge_Number_Display__c</fullName>
        <formula>TEXT( pledge_number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pledge Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Pledge__c</fullName>
        <label>Recurring Pledge</label>
        <referenceTo>Recurring_Donation__c</referenceTo>
        <relationshipLabel>Pledge Benefits</relationshipLabel>
        <relationshipName>Pledge_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaTransaction_Benefits_Id__c</fullName>
        <description>TA Transaction_Benefits external Id</description>
        <externalId>true</externalId>
        <label>TA Transaction_Benefits Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TaTransactions_Id_Short__c</fullName>
        <label>TaTransactions_Id_Short</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaTransactions_Id__c</fullName>
        <label>TaTransactions_Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adjustment_seq__c</fullName>
        <description>Adjustment Seq</description>
        <inlineHelpText>Adjustment Seq</inlineHelpText>
        <label>Adjustment Seq</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <description>This field is used for Apex batch processing for post processing ETL information</description>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>benefit__c</fullName>
        <description>Benefit</description>
        <label>Benefit</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>benefit_category__c</fullName>
        <label>Benefit Category</label>
        <picklist>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweepstakes/Contest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Premium Offers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust Donation Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Attendance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids&apos; Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Britcom Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Kids Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBY Underwriting Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>benefit_category_seq__c</fullName>
        <description>Benefit Category Seq</description>
        <inlineHelpText>Benefit Category Seq</inlineHelpText>
        <label>Benefit Category Seq</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>benefit_category_value__c</fullName>
        <description>Benefit Category</description>
        <inlineHelpText>Benefit Category</inlineHelpText>
        <label>Benefit Category Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>benefit_description__c</fullName>
        <label>Benefit Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>benefit_long_description__c</fullName>
        <label>Benefit Long Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>benefit_package__c</fullName>
        <description>Benefit Package</description>
        <label>Benefit Package</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>benefit_seq__c</fullName>
        <description>Benefit Seq</description>
        <inlineHelpText>Benefit Seq</inlineHelpText>
        <label>Benefit Seq</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>date_delivered__c</fullName>
        <description>Date Delivered</description>
        <inlineHelpText>Date Delivered</inlineHelpText>
        <label>Date Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>end_date_benefit__c</fullName>
        <description>End Date Benefit</description>
        <inlineHelpText>End Date Benefit</inlineHelpText>
        <label>End Date Benefit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gift_date__c</fullName>
        <description>Gift Date</description>
        <inlineHelpText>Gift Date</inlineHelpText>
        <label>Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gift_seq__c</fullName>
        <description>Gift Seq</description>
        <inlineHelpText>Gift Seq</inlineHelpText>
        <label>Gift Seq</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>last_date_benefit_sent__c</fullName>
        <description>Last Date Benefit Sent</description>
        <inlineHelpText>Last Date Benefit Sent</inlineHelpText>
        <label>Last Date Benefit Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mail_class__c</fullName>
        <label>Mail Class</label>
        <picklist>
            <picklistValues>
                <fullName>1st Class Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Class Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Class Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th Class Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Class Post Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overnight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USPS Next Day Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS Next Day Air</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>mail_class_value__c</fullName>
        <description>Mail Class</description>
        <inlineHelpText>Mail Class</inlineHelpText>
        <label>Mail Class Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ok_to_deliver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ok To Deliver = Y</description>
        <inlineHelpText>Check box, should default to checked when the payment processes</inlineHelpText>
        <label>Ok To Deliver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Pledge Benefits</relationshipLabel>
        <relationshipName>Pledge_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pledge_number__c</fullName>
        <description>Pledge Number</description>
        <inlineHelpText>Pledge Number</inlineHelpText>
        <label>Pledge Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>start_date_benefit__c</fullName>
        <description>Start Date Benefit</description>
        <inlineHelpText>Start Date Benefit</inlineHelpText>
        <label>Start Date Benefit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>suspend_delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Suspend Delivery</description>
        <inlineHelpText>Suspend Delivery if this box is checked.</inlineHelpText>
        <label>Suspend Delivery</label>
        <type>Checkbox</type>
    </fields>
    <label>Pledge Benefit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>benefit__c</columns>
        <columns>gift_date__c</columns>
        <columns>start_date_benefit__c</columns>
        <columns>end_date_benefit__c</columns>
        <columns>benefit_description__c</columns>
        <columns>benefit_package__c</columns>
        <columns>date_delivered__c</columns>
        <columns>suspend_delivery__c</columns>
        <columns>mail_class__c</columns>
        <columns>pledge_number__c</columns>
        <columns>last_date_benefit_sent__c</columns>
        <columns>TaTransactions_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pledge Benefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pledge Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>